--- a/package.json
+++ b/package.json
@@ -9,16 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@mui/material": "^5.5.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/recompose": "^0.30.10",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
+    "babel-plugin-import": "^1.13.3",
+    "clsx": "^1.1.1",
+    "env-cmd": "^10.1.0",
+    "next": "12.1.4",
+    "next-images": "^1.8.4",
+    "postcss": "^8.4.6",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "sass": "^1.49.8",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@types/node": "18.7.13",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "4.8.2"
+    "@babel/core": "^7.17.2",
+    "@types/node": "17.0.17",
+    "@types/react": "17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.0",
+    "typescript": "4.5.5"
   }
 }
