--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "babel-plugin-import": "^1.13.3",
     "clsx": "^1.1.1",
     "env-cmd": "^10.1.0",
-    "next": "12.1.4",
+    "next": "^12.2.5",
     "next-images": "^1.8.4",
     "postcss": "^8.4.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "sass": "^1.49.8",
     "tailwindcss": "^3.0.23"
@@ -35,7 +35,8 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.22.0",
